# genowl

./: .gitignore  CMakeLists.txt  README.md  package.xml
cmake/: genowl-extras.cmake.em
scripts/: CMakeLists.txt  genpkg_owl.py
src/genowl/: generator.py  genowl_main.py
